objects/LLC_BI__Loan__c.object
<CustomObject>
    <description>The Loan Object stores information of the details of a Loan.</description>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Product_Name__c</fullName>
        <description>Combined fields of product, line and type</description>
        <formula>text(LLC_BI__Product__c)  &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Line__c)  &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HVCRE_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVCRE Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Test__c</fullName>
        <inlineHelpText>Please denote if this a Test Record.</inlineHelpText>
        <label>Is this a Test?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__APR__c</fullName>
        <description>This percent field is optional and is populated once an offer is selected during the Retail Loan Workflow. It populates with the Annual Percentage Rate.</description>
        <label>APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Officer__c</fullName>
        <description>This field is optional. It is manually populated. The Account Officer field is typically used to identify the employee responsible for servicing the account (if different from the Loan Officer).</description>
        <label>Account Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is automatically populated during loan creation. This field is a lookup to a relationship/account that the loan is associated to and denotes the primary borrower for the loan.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Accrued_Interest__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the current amount of interest accrued on the loan.</description>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adverse_Action_Flag__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated when an adverse action is approved. This field is used to flag an adverse action workflow. Using a 1 updates this field&apos;s stage to complete and status to declined.  Using a 0 indicates it requires approval.</description>
        <inlineHelpText>If AAF = 1, then the stage was changed to decline by Credit. If AAF = 0, then it was changed by non-credit and required approval.</inlineHelpText>
        <label>Adverse Action Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allocated_Facility_Amount__c</fullName>
        <description>This optional field is automatically populated. This field sums the amounts from each of the participation records related to the loan.</description>
        <label>Allocated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term_Months__c</fullName>
        <description>This field is optional, but is required for Pricing and Rate Structure. It is manually populated. This field is used to specify the length of time (in months) over which the principal amount of the loan will be paid.</description>
        <label>Amortized Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term__c</fullName>
        <description>Deprecated field, no longer in use</description>
        <label>Amortized Term (Months) - D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AmountOutstanding__c</fullName>
        <description>The user populates this text field to record the borrower’s outstanding loan balance. By default, this field is blank.</description>
        <inlineHelpText>The amount outstanding for a line of commitment.</inlineHelpText>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Available__c</fullName>
        <description>This field is automatically populated via a formula. It is used to either reference or calculate the availability for a given level in the multi-level facility (for example, Main, Limit, Sublimit, or Takedown).</description>
        <formula>IF(ISBLANK(LLC_BI__Availability_From_Core__c), LLC_BI__Amount__c - LLC_BI__AmountOutstanding__c, LLC_BI__Availability_From_Core__c)</formula>
        <label>Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_New_Money__c</fullName>
        <description>The field specifies the loan&apos;s dollar amount of new money. It is optional and manually populated.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Unused__c</fullName>
        <description>This field is optional and specifies the amount of a multi-tiered loan commitment that remains unused over a specified period of time (for example, trailing 12 months) or to represent a similar reference. The user can manually populate it or it can be auto-populated via mapping from the financial institution&apos;s core.</description>
        <label>Amount Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is required. It is manually populated. It contains the full original amount of the Loan; this is the amount of the Loan at the time it was booked. This value should not change over time and is consistent over installment and line of credit products. This is used to calculate exposure for Line of Credit Products.</description>
        <inlineHelpText>This field is the &quot;Original Amount&quot; of the loan at the time of underwriting. This is different than the &quot;Principal Balance&quot; of the loan, which is the balance of the loan today.</inlineHelpText>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
        <description>The system automatically populates this optional field using values from the Product Feature with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
        <inlineHelpText>This system-populated field displays how much the interest rate increases annually.</inlineHelpText>
        <label>Annual Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the loan and is used as part of the SBA process and Customer Portal.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_Loan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field to determine the maximum amount approved for the loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the maximum amount approved for a loan.</inlineHelpText>
        <label>Approved For Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attorney__c</fullName>
        <description>This field is optional. It is manually populated. This text field is used to specify the attorney associated with loan closing.</description>
        <label>Attorney</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorization_Date__c</fullName>
        <description>This field is optional. It can be used to specify the date an SBA Authorization is received.</description>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Decision_Status__c</fullName>
        <description>This field is automatically updated via the auto decision process. It stores the result of the auto decision process.</description>
        <label>Auto-Decision Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay_Account__c</fullName>
        <description>This field is manually set. This is a text field used to specify the relationship/account being used to auto-pay the loan. Only used for reporting purposes.</description>
        <label>Auto Pay Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. It is a boolean field. When enabled, it flags that the loan is set up to use an auto-pay system. When disabled, it flags that the loan is not set up to use an auto-pay system. This field is only used for reporting purposes.</description>
        <label>Auto Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Availability_From_Core__c</fullName>
        <description>This field is optional and specifies the amount that remains available for advances. The user can manually populate it or it can be populated via mapping from the financial institution&apos;s core. nCino recommends that this field be populated from the core in order to display the correct availability for non-revolving loans.</description>
        <label>Availability from Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Payment__c</fullName>
        <description>This field is manually set. It is optional, but should be populated if LLC_BI__Balloon__c is set. This field is used to specify the total amount for the balloon payment.</description>
        <inlineHelpText>The total amount for the balloon payment</inlineHelpText>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Product_Structure__c</fullName>
        <description>Administrators manually select Ballon Amount or Balloon Term from this picklist, which populates dependently on the Balloon__c field. Balloon Amount and Balloon Term determine how the Balloon calculation is performed, whether based on the total amount of the loan or the total duration of the loan.</description>
        <label>Balloon Product Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balloon Amount</fullName>
                </value>
                <value>
                    <fullName>Balloon Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually select this optional boolean field to indicate whether the product is a Balloon product. By default, it is false.</description>
        <inlineHelpText>This checkbox will be automatically set to = True when the Amortization Period (Months) and the Term (Months) are different.</inlineHelpText>
        <label>Balloon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Address__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city of the billing address for a loan.</description>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state of the billing address for a loan.</description>
        <label>Billing State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Street__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the street address of the billing address for a loan.</description>
        <label>Billing Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Zipcode__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the ZIP code of the billing address for a loan.</description>
        <label>Billing Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_DateTime__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Booked Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Date__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration.  This date should not be edited.</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_City__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city in the address of the loan&apos;s primary borrower.</description>
        <label>Borrower City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_GL_Balance__c</fullName>
        <description>This field is optional. It is manually set. This currency field is used to specify the current borrower balance as shown on the institution&apos;s General Ledger. This field is used for reporting purposes only.</description>
        <inlineHelpText>Borrower&apos;s General Ledger Balance. Typically equals Principal Balance of the Loan. Exceptions are non-accrual, and charge-offs.</inlineHelpText>
        <label>Borrower GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state in the address of the loan&apos;s primary borrower.</description>
        <label>Borrower State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually set. This field is lookup to the branch object, and is used to specify the branch of the financial institution where the loan is held.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Broker_Fee__c</fullName>
        <description>This field is optional. It is manually set. This field holds the referral fee if the Loan was referred through a referral source, broker, or other intermediary.</description>
        <label>Referral Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is automatically set when a budget is selected for the loan. It is used for Construction Loan Administration loans.</description>
        <label>Budget</label>
        <referenceTo>LLC_BI__Budget__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Action_Taken__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the action taken on the loan.</description>
        <inlineHelpText>CRA Action Taken for Loan</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Loan Originated</fullName>
                </value>
                <value>
                    <fullName>2 - Loan Purchased By Your Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Affiliate__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates if the action was taken at the institution or an affiliate.</description>
        <inlineHelpText>CRA Affiliate</inlineHelpText>
        <label>Affiliate Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Action taken at this institution</fullName>
                </value>
                <value>
                    <fullName>2 - Action taken at an affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Amount__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the loan amount reported in thousands, rounded to the nearest thousand ($500 or higher should be rounded up to the next thousand).</description>
        <inlineHelpText>Report the amount in thousands, rounded to the nearest thousand ($500 should be rounded up to the next thousand).</inlineHelpText>
        <label>Loan Amount (amount in thousands)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Census_Tract_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the census tract number of the property, as defined by the U.S. Census Bureau.</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>Census Tract (####.## format)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Community_Development_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it CRA Community Development Reportable. When disabled, the loan does not fall under the CRA Community Development Reportable. By default, the field is disabled.</description>
        <inlineHelpText>CRA Community Development Reportable</inlineHelpText>
        <label>Community Development Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Consortium_Third_Party_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this loan falls under a category that makes it CRA Consortium/Third Party Reportable. When disabled, the loan does not fall under the CRA Consortium/Third Party Reportable. By default, the field is disabled.</description>
        <inlineHelpText>CRA Consortium/Third Party Reportable</inlineHelpText>
        <label>Consortium/Third Party Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Date_Action_Taken__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the date that the loan was originated or purchased.</description>
        <inlineHelpText>CRA Date Action Taken</inlineHelpText>
        <label>Date Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_County_Code_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the property&apos;s three-digit Federal Information Processing Standards (FIPS) County Code.</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>Three Digit County Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_County_Code__c</fullName>
        <description>--DEPRECATED-- FIPS County Code</description>
        <inlineHelpText>FIPS County Code</inlineHelpText>
        <label>-D Three Digit County Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_State_Code_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the property&apos;s five-digit Federal Information Processing Standards (FIPS) County Code.</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>Two Digit State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_FIPS_State_Code__c</fullName>
        <description>--DEPRECATED-- FIPS State Code</description>
        <inlineHelpText>FIPS State Code</inlineHelpText>
        <label>-D Two Digit State Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Loan_ID__c</fullName>
        <description>This field is optional. It is manually populated. This field is the unique system-generated Loan Identification Number.</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>CRA Loan ID</inlineHelpText>
        <label>Loan Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_MSA_MD_Number_Text__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
        <inlineHelpText>MSA/MD Number</inlineHelpText>
        <label>Five Digit MSA/MD Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_MSA_MD_Number__c</fullName>
        <description>--DEPRECATED-- MSA/MD Number</description>
        <inlineHelpText>MSA/MD Number</inlineHelpText>
        <label>-D Five Digit MSA/MD Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected. When enabled, it indicates that this the loan falls under a category that makes it CRA reportable. When disabled, the loan is not CRA reportable. By default, this field is disabled.</description>
        <inlineHelpText>CRA Reportable</inlineHelpText>
        <label>CRA Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Revenue__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the gross annual revenue of the business or farm to which the loan was made.</description>
        <inlineHelpText>CRA Revenue</inlineHelpText>
        <label>Revenue Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Less than or equal to $1 million</fullName>
                </value>
                <value>
                    <fullName>2 - Greater than $1 million</fullName>
                </value>
                <value>
                    <fullName>3 - Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Type_Code__c</fullName>
        <description>This field is optional. It is manually populated. This picklist field indicates the type of loan (Small business, Small farm, Other Lines / Loans for Small Business Purposes, Other Miscellaneous Loan Data, Motor vehicle, Home equity, Credit card, Other - Secured, Other - Unsecured).</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small business</fullName>
                </value>
                <value>
                    <fullName>Small farm</fullName>
                </value>
                <value>
                    <fullName>Other secured lines of credit - small business</fullName>
                </value>
                <value>
                    <fullName>Home equity</fullName>
                </value>
                <value>
                    <fullName>Motor vehicle</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Other secured consumer loans</fullName>
                </value>
                <value>
                    <fullName>Other unsecured consumer loans</fullName>
                </value>
                <value>
                    <fullName>Other loan data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Balloon_Amount__c</fullName>
        <description>This field is automatically populated via the payment structure. It stores the value of the balloon amount as calculated via a payment structure.</description>
        <inlineHelpText>Balloon amount calculated via a payment structure</inlineHelpText>
        <label>Calculated Balloon Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Call_Report_Code__c</fullName>
        <description>This field is automatically populated by imports as it comes from the General Ledger. It relates to how the loan portfolio is frequently reported to the board and regulators. This field is not displayed to the user.</description>
        <label>Call Report Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Census_Tract__c</fullName>
        <description>--DEPRECATED-- Census tract numbers as reported in the 2010 census. Used in HMDA reporting</description>
        <inlineHelpText>Census tract</inlineHelpText>
        <label>-D Census Tract (####.## format)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Class_Code__c</fullName>
        <description>This field is optional. If in use, it is automatically populated. This field is used to categorize loans by class. It is used for reporting purposes only.</description>
        <label>Class Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CloseDate__c</fullName>
        <description>This field is optional. This field is manually set. This date field is used to specify the date the financial institution expects the loan to close.</description>
        <label>Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Close_Date_Hard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. This field is a checkbox used to specify if the loan has a hard close date.</description>
        <label>Closing Date Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Close_Month__c</fullName>
        <description>This field is automatically populated. This formula field is used to specify the month in which the loan is projected to close (the month specified in Projected Closed Date).</description>
        <formula>DATE(VALUE(LEFT(TEXT(LLC_BI__CloseDate__c),4)), VALUE(MID(TEXT(LLC_BI__CloseDate__c),6,2)), 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closed_Date__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the loan is considered &apos;Closed&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <inlineHelpText>Closed Date is a calculated date that represents when the Loan is considered &apos;Closed&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>